Removing commons dependency